Actualización de los mapas
Mapas actualizados

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,10 @@
   }
 }
 
+.mapboxgl-control-container {
+  display: none !important;
+}
+
 @layer base {
   * {
     @apply border-border;
@@ -100,6 +104,17 @@
 
 *::-webkit-scrollbar-corner {
   display: none;
+}
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
 
